--- a/src/content/blog/2025-09-17-title.md
+++ b/src/content/blog/2025-09-17-title.md
@@ -1,9 +1,9 @@
 ---
 title: "Título do Post"
 description: "Descrição breve do post para SEO"
+date: 2025-09-17
 pubDate: "2025-09-17"
 author: "Daniel da Cunha Buerno"
 tags: [".NET", "Angular", "DevOps"]
 image: "/profile.jpeg" # ou outro caminho de imagem
 draft: true
----
